--- a/drone/public/index.html
+++ b/drone/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>Drone</title>
 
     <base href="/" />
 
@@ -15,6 +15,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>assets/icon/favicon.png" />
+    <link rel="stylesheet" href="assets/css/style.min.css">
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -25,6 +26,6 @@
   <body>
     <div id="app"></div>
   </body>
-
+  
 </html>
 
