--- a/drone/public/index.html
+++ b/drone/public/index.html
@@ -15,7 +15,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>assets/icon/favicon.png" />
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <!-- <link rel="stylesheet" href="assets/css/style.min.css"> -->
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
